fix bug 211289, from trunk, correctly update outliner row counts so we don't see blank lines with dots in them, a=mkaply