mozilla/mailnews/base/src/nsMsgDBView.h
@@ -367,6 +367,7 @@ protected:
   // last classification callback happens
   nsCString mLastJunkUriInBatch;
   PRUint8 mOutstandingJunkBatches;
+  nsUInt32Array mIndicesToNoteChange;
 
 protected:
   static nsresult   InitDisplayFormats();
@@ -382,7 +383,6 @@ private:
   nsresult PerformActionOnJunkMsgs();
   nsresult SaveJunkMsgForAction(nsIMsgIncomingServer *aServer, const char *aMsgURI, nsMsgJunkStatus aClassification);
 
-  nsUInt32Array mIndicesToNoteChange;
 };
 
 #endif
